--- a/webapp-template-admin/src/index.css
+++ b/webapp-template-admin/src/index.css
@@ -18,3 +18,14 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+/* 使用浏览器记住的表单信息(自动填充)时不改变输入框底色 */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #000 !important;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px transparent !important;
+}
